# hect

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  Doxyfile  Format.bat  Hect.sln  Hect.vcxproj  Hect.vcxproj.filters  LICENSE  README.md  _angle_8h_source.html  _any_8h_source.html  _asset_8h_source.html  _asset_cache_8h_source.html  _asset_decoder_8h_source.html  _asset_entry_8h_source.html  _asset_handle_8h_source.html  _axis_aligned_box_8h_source.html  _base_system_8h_source.html  _binary_decoder_8h_source.html  _binary_encoder_8h_source.html  _blend_factor_8h_source.html  _blend_function_8h_source.html  _blend_mode_8h_source.html  _bounding_box_8h_source.html  _bounding_box_system_8h_source.html  _box_8h_source.html  _bullet_8h_source.html  _byte_vector_8h_source.html  _camera_8h_source.html  _camera_system_8h_source.html  _color_8h_source.html  _component_8h_source.html  _component_event_8h_source.html  _component_iterator_8h_source.html  _component_listener_8h_source.html  _component_pool_8h_source.html  _component_registry_8h_source.html  _configuration_8h_source.html  (+594 more)
Dependencies/Bullet/: Bullet.vcxproj  Bullet.vcxproj.filters  CMakeLists.txt
Dependencies/Glew/: CMakeLists.txt  Glew.vcxproj  Glew.vcxproj.filters
Dependencies/JsonCpp/: CMakeLists.txt  JsonCpp.vcxproj  JsonCpp.vcxproj.filters
Engine/: CMakeLists.txt  Doxyfile  GenerateSources.bat  Sources.cmake
Engine/Assets/: Box.mesh  CMakeLists.txt  ColoredLine.Fragment.glsl  ColoredLine.Vertex.glsl  ColoredLine.material  ColoredLine.shader  Composite.material  Composite.shader  Compositor.glsl  Compositor.shader  Default.scene  DirectionalLight.glsl  DirectionalLight.material  DirectionalLight.shader  Environment.glsl  Environment.material  Environment.shader  Expose.glsl  Expose.material  Expose.shader  Exposure.glsl  GenerateSources.bat  GeometryBuffer.glsl  Opaque.Fragment.glsl  Opaque.Vertex.glsl  Opaque.shader  Particle.Fragment.glsl  Particle.Geometry.glsl  Screen.mesh  SkyBox.Fragment.glsl  SkyBox.Vertex.glsl  SkyBox.glsl  SkyBox.material  SkyBox.mesh  SkyBox.shader  Solid.Fragment.glsl  Solid.Vertex.glsl  Solid.glsl  Solid.material  Solid.shader  (+2 more)
Engine/Assets/Materials/: DebugLines.material.yaml  Opaque.material.yaml  OpaqueSolid.material
Engine/Assets/Obsolete/: BoundingBox.material  BoundingBox.mesh  Transform.material  Transform.mesh  Triplanar.glsl
Engine/Assets/RenderStages/: Geometry.glsl  LightAccumulation.glsl  OpaqueGeometry.glsl  PhysicalGeometry.glsl  PhysicalLightAccumulation.glsl  PostLightAccumulation.glsl
Engine/Assets/Rendering/: Box.mesh  Composite.glsl  Composite.shader  Composite.shader.yaml  DirectionalLight.glsl  DirectionalLight.shader  DirectionalLight.shader.yaml  Environment.glsl  Environment.shader  Environment.shader.yaml  Expose.glsl  Expose.shader.yaml  Screen.glsl  SkyBox.mesh  SkyBox.mesh.yaml
Engine/Assets/Scenes/: Default.scene  Default.scene.yaml
Engine/Assets/Shaders/: Additive.Fragment.glsl  Additive.Vertex.glsl  Additive.shader  Additive.shader.yaml  ColoredLine.Fragment.glsl  ColoredLine.Vertex.glsl  ColoredLine.shader  DebugLines.Fragment.glsl  DebugLines.Vertex.glsl  DebugLines.shader.yaml  Opaque.Fragment.glsl  Opaque.Vertex.glsl  Opaque.shader  Opaque.shader.yaml  OpaqueSolid.Fragment.glsl  OpaqueSolid.Vertex.glsl  OpaqueSolid.shader  OpaqueSolid.shader.yaml  Particle.Fragment.glsl  Particle.Vertex.glsl  Particle.shader  SkyBox.Fragment.glsl  SkyBox.Vertex.glsl  SkyBox.shader  SkyBox.shader.yaml  Solid.Fragment.glsl  Solid.Vertex.glsl  Solid.shader  Translucent.Fragment.glsl  Translucent.shader
Engine/Dependencies/Bullet/: CMakeLists.txt
Engine/Dependencies/Catch/: CMakeLists.txt
Engine/Dependencies/Celero/: CMakeLists.txt
Engine/Dependencies/ENet/: CMakeLists.txt  unix.c
Engine/Dependencies/Glew/: CMakeLists.txt
Engine/Dependencies/JsonCpp/: CMakeLists.txt
Engine/Dependencies/LibYaml/: CMakeLists.txt
Engine/Dependencies/LodePng/: CMakeLists.txt
Engine/Dependencies/Lua/: CMakeLists.txt  loslib.c
Engine/Dependencies/NanoVG/: CMakeLists.txt
Engine/Dependencies/PhysFS/: CMakeLists.txt
Engine/Dependencies/SDL2/: CMakeLists.txt
Engine/Dependencies/Selene/: CMakeLists.txt
Engine/Dependencies/Tclap/: CMakeLists.txt
Engine/Dependencies/YamlCpp/: CMakeLists.txt
Engine/Docs/: mainpage.md
Engine/Examples/HelloWorld/: CMakeLists.txt
Engine/Hect/Concurrency/: Task.cpp  Task.h  TaskPool.cpp  TaskPool.h
Engine/Hect/Core/: Any.cpp  Any.h  Any.inl  Error.cpp  Format.cpp  Logging.cpp  Logging.h  Sequence.h  Sequence.inl  Uncopyable.h
Engine/Hect/Event/: Dispatcher.h  Dispatcher.inl
Engine/Hect/Graphics/: FrameBuffer.cpp  FrameBuffer.h  GpuData.h  GpuData.inl  GpuObject.h  GpuObject.inl  GraphicsContext.cpp  GraphicsContext.h  Image.cpp  Image.h  ImageLoader.cpp  Material.cpp  Material.h  MaterialLoader.cpp  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshReader.cpp  MeshReader.h  MeshWriter.cpp  MeshWriter.h  Pass.cpp  Pass.h  RenderState.cpp  RenderState.h  RenderSystem.cpp  RenderSystem.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderArgument.cpp  ShaderArgument.h  ShaderLoader.cpp  ShaderModule.cpp  ShaderModule.h  ShaderModuleLoader.cpp  ShaderParameter.h  (+21 more)
Engine/Hect/IO/: Asset.h  AssetCache.cpp  AssetCache.h  AssetCache.inl  AssetDecoder.cpp  AssetDecoder.h  AssetEntry.h  AssetEntry.inl  AssetHandle.inl  BinaryDecoder.h  BinaryEncoder.h  Data.h  DataLoader.cpp  Decoder.inl  EncodeOperations.h  (+8 more)
Engine/Source/: Hect.h  mainpage.md
Engine/Tools/: format.py  generate_docs.py  reflect.py
Tests/SystemTests/: CMakeLists.txt  EncodingTests.cpp  Main.cpp  MaterialEncodingTests.cpp  Utilities.cpp  Utilities.h  WorldTests.cpp
Tests/UnitTests/: AnyTests.cpp  CMakeLists.txt  EncodingTests.cpp  EventTests.cpp  FileSystemTests.cpp  FormatTests.cpp  MeshReaderTests.cpp  MeshTests.cpp  PathTests.cpp  QuaternionTests.cpp  StreamTests.cpp  TaskPoolTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  Utilities.cpp  Vector2Tests.cpp  VertexAttributeTests.cpp  VertexLayoutTests.cpp  WorldTests.cpp
(+2729 files in other folders)
