if(WIN32)
    add_definitions("/D_CRT_SECURE_NO_WARNINGS /DHECT_EXPORTS /bigobj")

    include(CheckIncludeFiles)
    check_include_files(vld.h HECT_USE_VLD)
elseif(UNIX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra -Werror -pedantic")
endif()

configure_file(
    "${PROJECT_SOURCE_DIR}/Engine/Source/Hect/Core/Configuration.h.in"
    "${PROJECT_SOURCE_DIR}/Engine/Source/Hect/Core/Configuration.h"
    )

include_directories(
    "${PROJECT_SOURCE_DIR}/Engine/Source"
    SYSTEM "${PROJECT_SOURCE_DIR}/Engine/Dependencies/Bullet"
    SYSTEM "${PROJECT_SOURCE_DIR}/Engine/Dependencies/ENet"
    SYSTEM "${PROJECT_SOURCE_DIR}/Engine/Dependencies/Glew"
    SYSTEM "${PROJECT_SOURCE_DIR}/Engine/Dependencies/LibYaml"
    SYSTEM "${PROJECT_SOURCE_DIR}/Engine/Dependencies/LodePng"
    SYSTEM "${PROJECT_SOURCE_DIR}/Engine/Dependencies/Lua"
    SYSTEM "${PROJECT_SOURCE_DIR}/Engine/Dependencies/NanoVG"
    SYSTEM "${PROJECT_SOURCE_DIR}/Engine/Dependencies/PhysFS"
    SYSTEM "${PROJECT_SOURCE_DIR}/Engine/Dependencies/Selene"
    SYSTEM "${PROJECT_SOURCE_DIR}/Engine/Dependencies/Tclap"
    )

set(SOURCE_FILES
    "Source/Hect.h"
    "Source/Hect/Concurrency/Task.cpp"
    "Source/Hect/Concurrency/Task.h"
    "Source/Hect/Concurrency/TaskError.cpp"
    "Source/Hect/Concurrency/TaskError.h"
    "Source/Hect/Concurrency/TaskPool.cpp"
    "Source/Hect/Concurrency/TaskPool.h"
    "Source/Hect/Core/Any.cpp"
    "Source/Hect/Core/Any.h"
    "Source/Hect/Core/Any.inl"
    "Source/Hect/Core/Event.h"
    "Source/Hect/Core/Event.inl"
    "Source/Hect/Core/Exception.cpp"
    "Source/Hect/Core/Exception.h"
    "Source/Hect/Core/Export.h"
    "Source/Hect/Core/Format.cpp"
    "Source/Hect/Core/Format.h"
    "Source/Hect/Core/Logging.cpp"
    "Source/Hect/Core/Logging.h"
    "Source/Hect/Core/LogLevel.h"
    "Source/Hect/Core/LogMessageEvent.h"
    "Source/Hect/Core/Optional.h"
    "Source/Hect/Core/Optional.inl"
    "Source/Hect/Core/Sequence.h"
    "Source/Hect/Core/Sequence.inl"
    "Source/Hect/Core/StringMap.h"
    "Source/Hect/Core/StringMap.inl"
    "Source/Hect/Core/Uncopyable.cpp"
    "Source/Hect/Core/Uncopyable.h"
    "Source/Hect/Graphics/BlendFactor.h"
    "Source/Hect/Graphics/BlendFunction.h"
    "Source/Hect/Graphics/BlendMode.cpp"
    "Source/Hect/Graphics/BlendMode.h"
    "Source/Hect/Graphics/Color.cpp"
    "Source/Hect/Graphics/Color.h"
    "Source/Hect/Graphics/ColorSpace.h"
    "Source/Hect/Graphics/CubeSide.h"
    "Source/Hect/Graphics/CullMode.h"
    "Source/Hect/Graphics/Font.cpp"
    "Source/Hect/Graphics/Font.h"
    "Source/Hect/Graphics/FrameBuffer.cpp"
    "Source/Hect/Graphics/FrameBuffer.h"
    "Source/Hect/Graphics/FrameBufferAttachment.cpp"
    "Source/Hect/Graphics/FrameBufferAttachment.h"
    "Source/Hect/Graphics/FrameBufferAttachmentType.h"
    "Source/Hect/Graphics/FrameBufferSlot.h"
    "Source/Hect/Graphics/GeometryBuffer.cpp"
    "Source/Hect/Graphics/GeometryBuffer.h"
    "Source/Hect/Graphics/Image.cpp"
    "Source/Hect/Graphics/Image.h"
    "Source/Hect/Graphics/IndexType.h"
    "Source/Hect/Graphics/Material.cpp"
    "Source/Hect/Graphics/Material.h"
    "Source/Hect/Graphics/Mesh.cpp"
    "Source/Hect/Graphics/Mesh.h"
    "Source/Hect/Graphics/MeshReader.cpp"
    "Source/Hect/Graphics/MeshReader.h"
    "Source/Hect/Graphics/MeshWriter.cpp"
    "Source/Hect/Graphics/MeshWriter.h"
    "Source/Hect/Graphics/PixelFormat.cpp"
    "Source/Hect/Graphics/PixelFormat.h"
    "Source/Hect/Graphics/PixelType.h"
    "Source/Hect/Graphics/PrimitiveType.h"
    "Source/Hect/Graphics/Renderer.cpp"
    "Source/Hect/Graphics/Renderer.h"
    "Source/Hect/Graphics/Renderer.inl"
    "Source/Hect/Graphics/RenderStage.h"
    "Source/Hect/Graphics/RenderTarget.cpp"
    "Source/Hect/Graphics/RenderTarget.h"
    "Source/Hect/Graphics/Shader.cpp"
    "Source/Hect/Graphics/Shader.h"
    "Source/Hect/Graphics/ShaderModule.cpp"
    "Source/Hect/Graphics/ShaderModule.h"
    "Source/Hect/Graphics/ShaderModuleType.h"
    "Source/Hect/Graphics/Texture2.cpp"
    "Source/Hect/Graphics/Texture2.h"
    "Source/Hect/Graphics/Texture3.cpp"
    "Source/Hect/Graphics/Texture3.h"
    "Source/Hect/Graphics/TextureCube.cpp"
    "Source/Hect/Graphics/TextureCube.h"
    "Source/Hect/Graphics/TextureFilter.h"
    "Source/Hect/Graphics/Uniform.cpp"
    "Source/Hect/Graphics/Uniform.h"
    "Source/Hect/Graphics/UniformBinding.h"
    "Source/Hect/Graphics/UniformType.h"
    "Source/Hect/Graphics/UniformValue.cpp"
    "Source/Hect/Graphics/UniformValue.h"
    "Source/Hect/Graphics/VectorRenderer.cpp"
    "Source/Hect/Graphics/VectorRenderer.h"
    "Source/Hect/Graphics/VertexAttribute.cpp"
    "Source/Hect/Graphics/VertexAttribute.h"
    "Source/Hect/Graphics/VertexAttributeSemantic.h"
    "Source/Hect/Graphics/VertexAttributeType.h"
    "Source/Hect/Graphics/VertexLayout.cpp"
    "Source/Hect/Graphics/VertexLayout.h"
    "Source/Hect/Graphics/OpenGL/Renderer.cpp"
    "Source/Hect/Graphics/OpenGL/VectorRenderer.cpp"
    "Source/Hect/Graphics/Stub/Renderer.cpp"
    "Source/Hect/Graphics/Stub/VectorRenderer.cpp"
    "Source/Hect/Input/InputAxis.cpp"
    "Source/Hect/Input/InputAxis.h"
    "Source/Hect/Input/InputAxisBinding.cpp"
    "Source/Hect/Input/InputAxisBinding.h"
    "Source/Hect/Input/InputAxisBindingType.h"
    "Source/Hect/Input/Joystick.cpp"
    "Source/Hect/Input/Joystick.h"
    "Source/Hect/Input/JoystickAxis.h"
    "Source/Hect/Input/JoystickButton.h"
    "Source/Hect/Input/JoystickEvent.h"
    "Source/Hect/Input/JoystickEventType.h"
    "Source/Hect/Input/JoystickIndex.h"
    "Source/Hect/Input/Key.h"
    "Source/Hect/Input/Keyboard.cpp"
    "Source/Hect/Input/Keyboard.h"
    "Source/Hect/Input/KeyboardEvent.h"
    "Source/Hect/Input/KeyboardEventType.h"
    "Source/Hect/Input/Mouse.cpp"
    "Source/Hect/Input/Mouse.h"
    "Source/Hect/Input/MouseButton.h"
    "Source/Hect/Input/MouseEvent.h"
    "Source/Hect/Input/MouseEventType.h"
    "Source/Hect/Input/MouseMode.h"
    "Source/Hect/Interface/HorizontalAlign.h"
    "Source/Hect/Interface/Interface.cpp"
    "Source/Hect/Interface/Interface.h"
    "Source/Hect/Interface/StyleColor.h"
    "Source/Hect/Interface/VerticalAlign.h"
    "Source/Hect/Interface/Widget.h"
    "Source/Hect/Interface/Widget.inl"
    "Source/Hect/Interface/WidgetBase.cpp"
    "Source/Hect/Interface/WidgetBase.h"
    "Source/Hect/Interface/WidgetBase.inl"
    "Source/Hect/Interface/Widgets/Button.cpp"
    "Source/Hect/Interface/Widgets/Button.h"
    "Source/Hect/Interface/Widgets/CheckBox.cpp"
    "Source/Hect/Interface/Widgets/CheckBox.h"
    "Source/Hect/Interface/Widgets/Grid.cpp"
    "Source/Hect/Interface/Widgets/Grid.h"
    "Source/Hect/Interface/Widgets/Label.cpp"
    "Source/Hect/Interface/Widgets/Label.h"
    "Source/Hect/Interface/Widgets/Panel.cpp"
    "Source/Hect/Interface/Widgets/Panel.h"
    "Source/Hect/IO/Asset.h"
    "Source/Hect/IO/Asset.inl"
    "Source/Hect/IO/AssetCache.cpp"
    "Source/Hect/IO/AssetCache.h"
    "Source/Hect/IO/AssetCache.inl"
    "Source/Hect/IO/AssetDecoder.cpp"
    "Source/Hect/IO/AssetDecoder.h"
    "Source/Hect/IO/AssetEntry.h"
    "Source/Hect/IO/AssetEntry.inl"
    "Source/Hect/IO/AssetHandle.h"
    "Source/Hect/IO/AssetHandle.inl"
    "Source/Hect/IO/BinaryDecoder.cpp"
    "Source/Hect/IO/BinaryDecoder.h"
    "Source/Hect/IO/BinaryEncoder.cpp"
    "Source/Hect/IO/BinaryEncoder.h"
    "Source/Hect/IO/ByteVector.h"
    "Source/Hect/IO/DataValue.cpp"
    "Source/Hect/IO/DataValue.h"
    "Source/Hect/IO/DataValueDecoder.cpp"
    "Source/Hect/IO/DataValueDecoder.h"
    "Source/Hect/IO/DataValueEncoder.cpp"
    "Source/Hect/IO/DataValueEncoder.h"
    "Source/Hect/IO/DataValueType.h"
    "Source/Hect/IO/DecodeError.cpp"
    "Source/Hect/IO/DecodeError.h"
    "Source/Hect/IO/Decoder.cpp"
    "Source/Hect/IO/Decoder.h"
    "Source/Hect/IO/Decoder.inl"
    "Source/Hect/IO/Encodable.cpp"
    "Source/Hect/IO/Encodable.h"
    "Source/Hect/IO/EncodeError.cpp"
    "Source/Hect/IO/EncodeError.h"
    "Source/Hect/IO/EncodeOperations.cpp"
    "Source/Hect/IO/EncodeOperations.h"
    "Source/Hect/IO/EncodeOperations.inl"
    "Source/Hect/IO/Encoder.cpp"
    "Source/Hect/IO/Encoder.h"
    "Source/Hect/IO/Encoder.inl"
    "Source/Hect/IO/FileSystem.cpp"
    "Source/Hect/IO/FileSystem.h"
    "Source/Hect/IO/IOError.cpp"
    "Source/Hect/IO/IOError.h"
    "Source/Hect/IO/MemoryReadStream.cpp"
    "Source/Hect/IO/MemoryReadStream.h"
    "Source/Hect/IO/MemoryWriteStream.cpp"
    "Source/Hect/IO/MemoryWriteStream.h"
    "Source/Hect/IO/Path.cpp"
    "Source/Hect/IO/Path.h"
    "Source/Hect/IO/ReadStream.cpp"
    "Source/Hect/IO/ReadStream.h"
    "Source/Hect/IO/WriteStream.cpp"
    "Source/Hect/IO/WriteStream.h"
    "Source/Hect/Logic/Component.h"
    "Source/Hect/Logic/Component.inl"
    "Source/Hect/Logic/ComponentEvent.h"
    "Source/Hect/Logic/ComponentEventType.h"
    "Source/Hect/Logic/ComponentIterator.h"
    "Source/Hect/Logic/ComponentIterator.inl"
    "Source/Hect/Logic/ComponentListener.h"
    "Source/Hect/Logic/ComponentListener.inl"
    "Source/Hect/Logic/ComponentPool.h"
    "Source/Hect/Logic/ComponentPool.inl"
    "Source/Hect/Logic/ComponentRegistry.cpp"
    "Source/Hect/Logic/ComponentRegistry.h"
    "Source/Hect/Logic/ComponentRegistry.inl"
    "Source/Hect/Logic/Entity.cpp"
    "Source/Hect/Logic/Entity.h"
    "Source/Hect/Logic/Entity.inl"
    "Source/Hect/Logic/EntityChildIterator.cpp"
    "Source/Hect/Logic/EntityChildIterator.h"
    "Source/Hect/Logic/EntityChildren.cpp"
    "Source/Hect/Logic/EntityChildren.h"
    "Source/Hect/Logic/EntityEvent.h"
    "Source/Hect/Logic/EntityEventType.h"
    "Source/Hect/Logic/EntityHandle.cpp"
    "Source/Hect/Logic/EntityHandle.h"
    "Source/Hect/Logic/EntityIterator.cpp"
    "Source/Hect/Logic/EntityIterator.h"
    "Source/Hect/Logic/EntityPool.cpp"
    "Source/Hect/Logic/EntityPool.h"
    "Source/Hect/Logic/EntityPool.inl"
    "Source/Hect/Logic/IdPool.h"
    "Source/Hect/Logic/IdPool.inl"
    "Source/Hect/Logic/Scene.cpp"
    "Source/Hect/Logic/Scene.h"
    "Source/Hect/Logic/Scene.inl"
    "Source/Hect/Logic/System.h"
    "Source/Hect/Logic/System.inl"
    "Source/Hect/Logic/SystemBase.cpp"
    "Source/Hect/Logic/SystemBase.h"
    "Source/Hect/Logic/SystemHandle.h"
    "Source/Hect/Logic/SystemHandle.inl"
    "Source/Hect/Logic/SystemRegistry.cpp"
    "Source/Hect/Logic/SystemRegistry.h"
    "Source/Hect/Logic/SystemRegistry.inl"
    "Source/Hect/Logic/SystemTickStage.h"
    "Source/Hect/Logic/Components/BoundingBox.h"
    "Source/Hect/Logic/Components/Camera.h"
    "Source/Hect/Logic/Components/DirectionalLight.h"
    "Source/Hect/Logic/Components/LightProbe.h"
    "Source/Hect/Logic/Components/Model.cpp"
    "Source/Hect/Logic/Components/Model.h"
    "Source/Hect/Logic/Components/RigidBody.h"
    "Source/Hect/Logic/Components/SkyBox.h"
    "Source/Hect/Logic/Components/Transform.cpp"
    "Source/Hect/Logic/Components/Transform.h"
    "Source/Hect/Logic/Systems/BoundingBoxSystem.cpp"
    "Source/Hect/Logic/Systems/BoundingBoxSystem.h"
    "Source/Hect/Logic/Systems/CameraSystem.cpp"
    "Source/Hect/Logic/Systems/CameraSystem.h"
    "Source/Hect/Logic/Systems/DebugSystem.cpp"
    "Source/Hect/Logic/Systems/DebugSystem.h"
    "Source/Hect/Logic/Systems/InputSystem.cpp"
    "Source/Hect/Logic/Systems/InputSystem.h"
    "Source/Hect/Logic/Systems/InterfaceSystem.cpp"
    "Source/Hect/Logic/Systems/InterfaceSystem.h"
    "Source/Hect/Logic/Systems/PhysicsSystem.cpp"
    "Source/Hect/Logic/Systems/PhysicsSystem.h"
    "Source/Hect/Logic/Systems/RenderSystem.cpp"
    "Source/Hect/Logic/Systems/RenderSystem.h"
    "Source/Hect/Logic/Systems/ScriptSystem.cpp"
    "Source/Hect/Logic/Systems/ScriptSystem.h"
    "Source/Hect/Logic/Systems/TransformSystem.cpp"
    "Source/Hect/Logic/Systems/TransformSystem.h"
    "Source/Hect/Math/Angle.cpp"
    "Source/Hect/Math/Angle.h"
    "Source/Hect/Math/AxisAlignedBox.cpp"
    "Source/Hect/Math/AxisAlignedBox.h"
    "Source/Hect/Math/Box.cpp"
    "Source/Hect/Math/Box.h"
    "Source/Hect/Math/Constants.h"
    "Source/Hect/Math/Frustum.cpp"
    "Source/Hect/Math/Frustum.h"
    "Source/Hect/Math/Functions.h"
    "Source/Hect/Math/Functions.inl"
    "Source/Hect/Math/Matrix4.h"
    "Source/Hect/Math/Matrix4.inl"
    "Source/Hect/Math/Plane.cpp"
    "Source/Hect/Math/Plane.h"
    "Source/Hect/Math/Quaternion.h"
    "Source/Hect/Math/Quaternion.inl"
    "Source/Hect/Math/Rectangle.cpp"
    "Source/Hect/Math/Rectangle.h"
    "Source/Hect/Math/Sphere.cpp"
    "Source/Hect/Math/Sphere.h"
    "Source/Hect/Math/Vector2.h"
    "Source/Hect/Math/Vector2.inl"
    "Source/Hect/Math/Vector3.h"
    "Source/Hect/Math/Vector3.inl"
    "Source/Hect/Math/Vector4.h"
    "Source/Hect/Math/Vector4.inl"
    "Source/Hect/Network/Host.cpp"
    "Source/Hect/Network/Host.h"
    "Source/Hect/Network/IPAddress.cpp"
    "Source/Hect/Network/IPAddress.h"
    "Source/Hect/Network/Peer.cpp"
    "Source/Hect/Network/Peer.h"
    "Source/Hect/Noise/Random.cpp"
    "Source/Hect/Noise/Random.h"
    "Source/Hect/Reflection/Enum.cpp"
    "Source/Hect/Reflection/Enum.h"
    "Source/Hect/Reflection/Enum.inl"
    "Source/Hect/Reflection/Type.cpp"
    "Source/Hect/Reflection/Type.h"
    "Source/Hect/Reflection/Type.inl"
    "Source/Hect/Runtime/Engine.cpp"
    "Source/Hect/Runtime/Engine.h"
    "Source/Hect/Runtime/Platform.h"
    "Source/Hect/Runtime/VideoMode.cpp"
    "Source/Hect/Runtime/VideoMode.h"
    "Source/Hect/Runtime/Window.cpp"
    "Source/Hect/Runtime/Window.h"
    "Source/Hect/Runtime/OpenGL/Platform.cpp"
    "Source/Hect/Runtime/OpenGL/Window.cpp"
    "Source/Hect/Runtime/Stub/Platform.cpp"
    "Source/Hect/Runtime/Stub/Window.cpp"
    "Source/Hect/Timing/Timer.cpp"
    "Source/Hect/Timing/Timer.h"
    "Source/Hect/Timing/TimeSpan.cpp"
    "Source/Hect/Timing/TimeSpan.h"
    "Source/Hect/Timing/TimeStamp.h"
    )
    
source_group("Source" FILES
    "Source/Hect.h"
    )
    
source_group("Source\\Hect\\Concurrency" FILES
    "Source/Hect/Concurrency/Task.cpp"
    "Source/Hect/Concurrency/Task.h"
    "Source/Hect/Concurrency/TaskError.cpp"
    "Source/Hect/Concurrency/TaskError.h"
    "Source/Hect/Concurrency/TaskPool.cpp"
    "Source/Hect/Concurrency/TaskPool.h"
    )
    
source_group("Source\\Hect\\Core" FILES
    "Source/Hect/Core/Any.cpp"
    "Source/Hect/Core/Any.h"
    "Source/Hect/Core/Any.inl"
    "Source/Hect/Core/Event.h"
    "Source/Hect/Core/Event.inl"
    "Source/Hect/Core/Exception.cpp"
    "Source/Hect/Core/Exception.h"
    "Source/Hect/Core/Export.h"
    "Source/Hect/Core/Format.cpp"
    "Source/Hect/Core/Format.h"
    "Source/Hect/Core/Logging.cpp"
    "Source/Hect/Core/Logging.h"
    "Source/Hect/Core/LogLevel.h"
    "Source/Hect/Core/LogMessageEvent.h"
    "Source/Hect/Core/Optional.h"
    "Source/Hect/Core/Optional.inl"
    "Source/Hect/Core/Sequence.h"
    "Source/Hect/Core/Sequence.inl"
    "Source/Hect/Core/StringMap.h"
    "Source/Hect/Core/StringMap.inl"
    "Source/Hect/Core/Uncopyable.cpp"
    "Source/Hect/Core/Uncopyable.h"
    )
    
source_group("Source\\Hect\\Graphics" FILES
    "Source/Hect/Graphics/BlendFactor.h"
    "Source/Hect/Graphics/BlendFunction.h"
    "Source/Hect/Graphics/BlendMode.cpp"
    "Source/Hect/Graphics/BlendMode.h"
    "Source/Hect/Graphics/Color.cpp"
    "Source/Hect/Graphics/Color.h"
    "Source/Hect/Graphics/ColorSpace.h"
    "Source/Hect/Graphics/CubeSide.h"
    "Source/Hect/Graphics/CullMode.h"
    "Source/Hect/Graphics/Font.cpp"
    "Source/Hect/Graphics/Font.h"
    "Source/Hect/Graphics/FrameBuffer.cpp"
    "Source/Hect/Graphics/FrameBuffer.h"
    "Source/Hect/Graphics/FrameBufferAttachment.cpp"
    "Source/Hect/Graphics/FrameBufferAttachment.h"
    "Source/Hect/Graphics/FrameBufferAttachmentType.h"
    "Source/Hect/Graphics/FrameBufferSlot.h"
    "Source/Hect/Graphics/GeometryBuffer.cpp"
    "Source/Hect/Graphics/GeometryBuffer.h"
    "Source/Hect/Graphics/Image.cpp"
    "Source/Hect/Graphics/Image.h"
    "Source/Hect/Graphics/IndexType.h"
    "Source/Hect/Graphics/Material.cpp"
    "Source/Hect/Graphics/Material.h"
    "Source/Hect/Graphics/Mesh.cpp"
    "Source/Hect/Graphics/Mesh.h"
    "Source/Hect/Graphics/MeshReader.cpp"
    "Source/Hect/Graphics/MeshReader.h"
    "Source/Hect/Graphics/MeshWriter.cpp"
    "Source/Hect/Graphics/MeshWriter.h"
    "Source/Hect/Graphics/PixelFormat.cpp"
    "Source/Hect/Graphics/PixelFormat.h"
    "Source/Hect/Graphics/PixelType.h"
    "Source/Hect/Graphics/PrimitiveType.h"
    "Source/Hect/Graphics/Renderer.cpp"
    "Source/Hect/Graphics/Renderer.h"
    "Source/Hect/Graphics/Renderer.inl"
    "Source/Hect/Graphics/RenderStage.h"
    "Source/Hect/Graphics/RenderTarget.cpp"
    "Source/Hect/Graphics/RenderTarget.h"
    "Source/Hect/Graphics/Shader.cpp"
    "Source/Hect/Graphics/Shader.h"
    "Source/Hect/Graphics/ShaderModule.cpp"
    "Source/Hect/Graphics/ShaderModule.h"
    "Source/Hect/Graphics/ShaderModuleType.h"
    "Source/Hect/Graphics/Texture2.cpp"
    "Source/Hect/Graphics/Texture2.h"
    "Source/Hect/Graphics/Texture3.cpp"
    "Source/Hect/Graphics/Texture3.h"
    "Source/Hect/Graphics/TextureCube.cpp"
    "Source/Hect/Graphics/TextureCube.h"
    "Source/Hect/Graphics/TextureFilter.h"
    "Source/Hect/Graphics/Uniform.cpp"
    "Source/Hect/Graphics/Uniform.h"
    "Source/Hect/Graphics/UniformBinding.h"
    "Source/Hect/Graphics/UniformType.h"
    "Source/Hect/Graphics/UniformValue.cpp"
    "Source/Hect/Graphics/UniformValue.h"
    "Source/Hect/Graphics/VectorRenderer.cpp"
    "Source/Hect/Graphics/VectorRenderer.h"
    "Source/Hect/Graphics/VertexAttribute.cpp"
    "Source/Hect/Graphics/VertexAttribute.h"
    "Source/Hect/Graphics/VertexAttributeSemantic.h"
    "Source/Hect/Graphics/VertexAttributeType.h"
    "Source/Hect/Graphics/VertexLayout.cpp"
    "Source/Hect/Graphics/VertexLayout.h"
    )
    
source_group("Source\\Hect\\Graphics\\OpenGL" FILES
    "Source/Hect/Graphics/OpenGL/Renderer.cpp"
    "Source/Hect/Graphics/OpenGL/VectorRenderer.cpp"
    )
    
source_group("Source\\Hect\\Graphics\\Stub" FILES
    "Source/Hect/Graphics/Stub/Renderer.cpp"
    "Source/Hect/Graphics/Stub/VectorRenderer.cpp"
    )
    
source_group("Source\\Hect\\Input" FILES
    "Source/Hect/Input/InputAxis.cpp"
    "Source/Hect/Input/InputAxis.h"
    "Source/Hect/Input/InputAxisBinding.cpp"
    "Source/Hect/Input/InputAxisBinding.h"
    "Source/Hect/Input/InputAxisBindingType.h"
    "Source/Hect/Input/Joystick.cpp"
    "Source/Hect/Input/Joystick.h"
    "Source/Hect/Input/JoystickAxis.h"
    "Source/Hect/Input/JoystickButton.h"
    "Source/Hect/Input/JoystickEvent.h"
    "Source/Hect/Input/JoystickEventType.h"
    "Source/Hect/Input/JoystickIndex.h"
    "Source/Hect/Input/Key.h"
    "Source/Hect/Input/Keyboard.cpp"
    "Source/Hect/Input/Keyboard.h"
    "Source/Hect/Input/KeyboardEvent.h"
    "Source/Hect/Input/KeyboardEventType.h"
    "Source/Hect/Input/Mouse.cpp"
    "Source/Hect/Input/Mouse.h"
    "Source/Hect/Input/MouseButton.h"
    "Source/Hect/Input/MouseEvent.h"
    "Source/Hect/Input/MouseEventType.h"
    "Source/Hect/Input/MouseMode.h"
    )
    
source_group("Source\\Hect\\Interface" FILES
    "Source/Hect/Interface/HorizontalAlign.h"
    "Source/Hect/Interface/Interface.cpp"
    "Source/Hect/Interface/Interface.h"
    "Source/Hect/Interface/StyleColor.h"
    "Source/Hect/Interface/VerticalAlign.h"
    "Source/Hect/Interface/Widget.h"
    "Source/Hect/Interface/Widget.inl"
    "Source/Hect/Interface/WidgetBase.cpp"
    "Source/Hect/Interface/WidgetBase.h"
    "Source/Hect/Interface/WidgetBase.inl"
    )
    
source_group("Source\\Hect\\Interface\\Widgets" FILES
    "Source/Hect/Interface/Widgets/Button.cpp"
    "Source/Hect/Interface/Widgets/Button.h"
    "Source/Hect/Interface/Widgets/CheckBox.cpp"
    "Source/Hect/Interface/Widgets/CheckBox.h"
    "Source/Hect/Interface/Widgets/Grid.cpp"
    "Source/Hect/Interface/Widgets/Grid.h"
    "Source/Hect/Interface/Widgets/Label.cpp"
    "Source/Hect/Interface/Widgets/Label.h"
    "Source/Hect/Interface/Widgets/Panel.cpp"
    "Source/Hect/Interface/Widgets/Panel.h"
    )
    
source_group("Source\\Hect\\IO" FILES
    "Source/Hect/IO/Asset.h"
    "Source/Hect/IO/Asset.inl"
    "Source/Hect/IO/AssetCache.cpp"
    "Source/Hect/IO/AssetCache.h"
    "Source/Hect/IO/AssetCache.inl"
    "Source/Hect/IO/AssetDecoder.cpp"
    "Source/Hect/IO/AssetDecoder.h"
    "Source/Hect/IO/AssetEntry.h"
    "Source/Hect/IO/AssetEntry.inl"
    "Source/Hect/IO/AssetHandle.h"
    "Source/Hect/IO/AssetHandle.inl"
    "Source/Hect/IO/BinaryDecoder.cpp"
    "Source/Hect/IO/BinaryDecoder.h"
    "Source/Hect/IO/BinaryEncoder.cpp"
    "Source/Hect/IO/BinaryEncoder.h"
    "Source/Hect/IO/ByteVector.h"
    "Source/Hect/IO/DataValue.cpp"
    "Source/Hect/IO/DataValue.h"
    "Source/Hect/IO/DataValueDecoder.cpp"
    "Source/Hect/IO/DataValueDecoder.h"
    "Source/Hect/IO/DataValueEncoder.cpp"
    "Source/Hect/IO/DataValueEncoder.h"
    "Source/Hect/IO/DataValueType.h"
    "Source/Hect/IO/DecodeError.cpp"
    "Source/Hect/IO/DecodeError.h"
    "Source/Hect/IO/Decoder.cpp"
    "Source/Hect/IO/Decoder.h"
    "Source/Hect/IO/Decoder.inl"
    "Source/Hect/IO/Encodable.cpp"
    "Source/Hect/IO/Encodable.h"
    "Source/Hect/IO/EncodeError.cpp"
    "Source/Hect/IO/EncodeError.h"
    "Source/Hect/IO/EncodeOperations.cpp"
    "Source/Hect/IO/EncodeOperations.h"
    "Source/Hect/IO/EncodeOperations.inl"
    "Source/Hect/IO/Encoder.cpp"
    "Source/Hect/IO/Encoder.h"
    "Source/Hect/IO/Encoder.inl"
    "Source/Hect/IO/FileSystem.cpp"
    "Source/Hect/IO/FileSystem.h"
    "Source/Hect/IO/IOError.cpp"
    "Source/Hect/IO/IOError.h"
    "Source/Hect/IO/MemoryReadStream.cpp"
    "Source/Hect/IO/MemoryReadStream.h"
    "Source/Hect/IO/MemoryWriteStream.cpp"
    "Source/Hect/IO/MemoryWriteStream.h"
    "Source/Hect/IO/Path.cpp"
    "Source/Hect/IO/Path.h"
    "Source/Hect/IO/ReadStream.cpp"
    "Source/Hect/IO/ReadStream.h"
    "Source/Hect/IO/WriteStream.cpp"
    "Source/Hect/IO/WriteStream.h"
    )
    
source_group("Source\\Hect\\Logic" FILES
    "Source/Hect/Logic/Component.h"
    "Source/Hect/Logic/Component.inl"
    "Source/Hect/Logic/ComponentEvent.h"
    "Source/Hect/Logic/ComponentEventType.h"
    "Source/Hect/Logic/ComponentIterator.h"
    "Source/Hect/Logic/ComponentIterator.inl"
    "Source/Hect/Logic/ComponentListener.h"
    "Source/Hect/Logic/ComponentListener.inl"
    "Source/Hect/Logic/ComponentPool.h"
    "Source/Hect/Logic/ComponentPool.inl"
    "Source/Hect/Logic/ComponentRegistry.cpp"
    "Source/Hect/Logic/ComponentRegistry.h"
    "Source/Hect/Logic/ComponentRegistry.inl"
    "Source/Hect/Logic/Entity.cpp"
    "Source/Hect/Logic/Entity.h"
    "Source/Hect/Logic/Entity.inl"
    "Source/Hect/Logic/EntityChildIterator.cpp"
    "Source/Hect/Logic/EntityChildIterator.h"
    "Source/Hect/Logic/EntityChildren.cpp"
    "Source/Hect/Logic/EntityChildren.h"
    "Source/Hect/Logic/EntityEvent.h"
    "Source/Hect/Logic/EntityEventType.h"
    "Source/Hect/Logic/EntityHandle.cpp"
    "Source/Hect/Logic/EntityHandle.h"
    "Source/Hect/Logic/EntityIterator.cpp"
    "Source/Hect/Logic/EntityIterator.h"
    "Source/Hect/Logic/EntityPool.cpp"
    "Source/Hect/Logic/EntityPool.h"
    "Source/Hect/Logic/EntityPool.inl"
    "Source/Hect/Logic/IdPool.h"
    "Source/Hect/Logic/IdPool.inl"
    "Source/Hect/Logic/Scene.cpp"
    "Source/Hect/Logic/Scene.h"
    "Source/Hect/Logic/Scene.inl"
    "Source/Hect/Logic/System.h"
    "Source/Hect/Logic/System.inl"
    "Source/Hect/Logic/SystemBase.cpp"
    "Source/Hect/Logic/SystemBase.h"
    "Source/Hect/Logic/SystemHandle.h"
    "Source/Hect/Logic/SystemHandle.inl"
    "Source/Hect/Logic/SystemRegistry.cpp"
    "Source/Hect/Logic/SystemRegistry.h"
    "Source/Hect/Logic/SystemRegistry.inl"
    "Source/Hect/Logic/SystemTickStage.h"
    )
    
source_group("Source\\Hect\\Logic\\Components" FILES
    "Source/Hect/Logic/Components/BoundingBox.h"
    "Source/Hect/Logic/Components/Camera.h"
    "Source/Hect/Logic/Components/DirectionalLight.h"
    "Source/Hect/Logic/Components/LightProbe.h"
    "Source/Hect/Logic/Components/Model.cpp"
    "Source/Hect/Logic/Components/Model.h"
    "Source/Hect/Logic/Components/RigidBody.h"
    "Source/Hect/Logic/Components/SkyBox.h"
    "Source/Hect/Logic/Components/Transform.cpp"
    "Source/Hect/Logic/Components/Transform.h"
    )
    
source_group("Source\\Hect\\Logic\\Systems" FILES
    "Source/Hect/Logic/Systems/BoundingBoxSystem.cpp"
    "Source/Hect/Logic/Systems/BoundingBoxSystem.h"
    "Source/Hect/Logic/Systems/CameraSystem.cpp"
    "Source/Hect/Logic/Systems/CameraSystem.h"
    "Source/Hect/Logic/Systems/DebugSystem.cpp"
    "Source/Hect/Logic/Systems/DebugSystem.h"
    "Source/Hect/Logic/Systems/InputSystem.cpp"
    "Source/Hect/Logic/Systems/InputSystem.h"
    "Source/Hect/Logic/Systems/InterfaceSystem.cpp"
    "Source/Hect/Logic/Systems/InterfaceSystem.h"
    "Source/Hect/Logic/Systems/PhysicsSystem.cpp"
    "Source/Hect/Logic/Systems/PhysicsSystem.h"
    "Source/Hect/Logic/Systems/RenderSystem.cpp"
    "Source/Hect/Logic/Systems/RenderSystem.h"
    "Source/Hect/Logic/Systems/ScriptSystem.cpp"
    "Source/Hect/Logic/Systems/ScriptSystem.h"
    "Source/Hect/Logic/Systems/TransformSystem.cpp"
    "Source/Hect/Logic/Systems/TransformSystem.h"
    )
    
source_group("Source\\Hect\\Math" FILES
    "Source/Hect/Math/Angle.cpp"
    "Source/Hect/Math/Angle.h"
    "Source/Hect/Math/AxisAlignedBox.cpp"
    "Source/Hect/Math/AxisAlignedBox.h"
    "Source/Hect/Math/Box.cpp"
    "Source/Hect/Math/Box.h"
    "Source/Hect/Math/Constants.h"
    "Source/Hect/Math/Frustum.cpp"
    "Source/Hect/Math/Frustum.h"
    "Source/Hect/Math/Functions.h"
    "Source/Hect/Math/Functions.inl"
    "Source/Hect/Math/Matrix4.h"
    "Source/Hect/Math/Matrix4.inl"
    "Source/Hect/Math/Plane.cpp"
    "Source/Hect/Math/Plane.h"
    "Source/Hect/Math/Quaternion.h"
    "Source/Hect/Math/Quaternion.inl"
    "Source/Hect/Math/Rectangle.cpp"
    "Source/Hect/Math/Rectangle.h"
    "Source/Hect/Math/Sphere.cpp"
    "Source/Hect/Math/Sphere.h"
    "Source/Hect/Math/Vector2.h"
    "Source/Hect/Math/Vector2.inl"
    "Source/Hect/Math/Vector3.h"
    "Source/Hect/Math/Vector3.inl"
    "Source/Hect/Math/Vector4.h"
    "Source/Hect/Math/Vector4.inl"
    )
    
source_group("Source\\Hect\\Network" FILES
    "Source/Hect/Network/Host.cpp"
    "Source/Hect/Network/Host.h"
    "Source/Hect/Network/IPAddress.cpp"
    "Source/Hect/Network/IPAddress.h"
    "Source/Hect/Network/Peer.cpp"
    "Source/Hect/Network/Peer.h"
    )
    
source_group("Source\\Hect\\Noise" FILES
    "Source/Hect/Noise/Random.cpp"
    "Source/Hect/Noise/Random.h"
    )
    
source_group("Source\\Hect\\Reflection" FILES
    "Source/Hect/Reflection/Enum.cpp"
    "Source/Hect/Reflection/Enum.h"
    "Source/Hect/Reflection/Enum.inl"
    "Source/Hect/Reflection/Type.cpp"
    "Source/Hect/Reflection/Type.h"
    "Source/Hect/Reflection/Type.inl"
    )
    
source_group("Source\\Hect\\Runtime" FILES
    "Source/Hect/Runtime/Engine.cpp"
    "Source/Hect/Runtime/Engine.h"
    "Source/Hect/Runtime/Platform.h"
    "Source/Hect/Runtime/VideoMode.cpp"
    "Source/Hect/Runtime/VideoMode.h"
    "Source/Hect/Runtime/Window.cpp"
    "Source/Hect/Runtime/Window.h"
    )
    
source_group("Source\\Hect\\Runtime\\OpenGL" FILES
    "Source/Hect/Runtime/OpenGL/Platform.cpp"
    "Source/Hect/Runtime/OpenGL/Window.cpp"
    )
    
source_group("Source\\Hect\\Runtime\\Stub" FILES
    "Source/Hect/Runtime/Stub/Platform.cpp"
    "Source/Hect/Runtime/Stub/Window.cpp"
    )
    
source_group("Source\\Hect\\Timing" FILES
    "Source/Hect/Timing/Timer.cpp"
    "Source/Hect/Timing/Timer.h"
    "Source/Hect/Timing/TimeSpan.cpp"
    "Source/Hect/Timing/TimeSpan.h"
    "Source/Hect/Timing/TimeStamp.h"
    )
    
add_library(Hect SHARED ${SOURCE_FILES})

add_subdirectory(${PROJECT_SOURCE_DIR}/Engine/Assets)
add_dependencies(Hect HectAssets)

add_subdirectory(${PROJECT_SOURCE_DIR}/Engine/Source/Hect/Generated)
add_dependencies(Hect HectTypes)

set(LINK_LIBRARIES Bullet ENet Glew LibYaml LodePng NanoVG PhysFS Lua)

# Add OpenGL and SDL dependencies if not building headless
if(NOT HEADLESS)

    # OpenGL
    find_package(OpenGL REQUIRED)
    include_directories(${OPENGL_INCLUDE_DIRS})
    list(APPEND LINK_LIBRARIES ${OPENGL_LIBRARIES})

    # SDL
    if(UNIX)
        include(FindPkgConfig)
        pkg_search_module(SDL2 required sdl2)
        include_directories(${SDL2_INCLUDE_DIRS})
        list(APPEND LINK_LIBRARIES ${SDL2_LIBRARIES})
    elseif(WIN32)
        set(SDL_DIR "${PROJECT_SOURCE_DIR}/Engine/Dependencies/SDL2-2.0.3")
        include_directories("${SDL_DIR}/include/")
        if(CMAKE_SIZEOF_VOID_P EQUAL 8)
            list(APPEND LINK_LIBRARIES "${SDL_DIR}/lib/x64/SDL2.lib")
            add_custom_command(TARGET Hect
                POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy "${SDL_DIR}/lib/x64/SDL2.dll" "${OUTPUT_DIR}/SDL2.dll"
                )
        else()
            list(APPEND LINK_LIBRARIES "${SDL_DIR}/lib/x86/SDL2.lib")
            add_custom_command(TARGET Hect
                POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy "${SDL_DIR}/lib/x86/SDL2.dll" "${OUTPUT_DIR}//SDL2.dll"
                )
        endif()
    endif()
endif()

# Add platform-specific dependencies
if(UNIX)
    list(APPEND LINK_LIBRARIES "pthread")
elseif(WIN32)
    list(APPEND LINK_LIBRARIES "ws2_32" "winmm")
endif()

target_link_libraries(Hect ${LINK_LIBRARIES})

set_target_properties(Hect PROPERTIES
    PROJECT_LABEL Hect
    LINKER_LANGUAGE CXX
    FOLDER "/Engine"
    )
